src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2_StringErrorContext.class */
public final class NVXGpuMulticast2_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglAsyncCopyImageSubDataNVX(IJJIIIIIIIIIIIIIIIIIIJJ)I", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glAsyncCopyImageSubDataNVX(Ljava/nio/IntBuffer;Ljava/nio/LongBuffer;IIIIIIIIIIIIIIIIILjava/nio/IntBuffer;Ljava/nio/LongBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("nglAsyncCopyBufferSubDataNVX(IJJIIIIJJJIJJ)J", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glAsyncCopyBufferSubDataNVX(Ljava/nio/IntBuffer;Ljava/nio/LongBuffer;IIIIJJJLjava/nio/IntBuffer;Ljava/nio/LongBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glUploadGpuMaskNVX(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("nglMulticastViewportArrayvNVX(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glMulticastViewportArrayvNVX(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("nglMulticastScissorArrayvNVX(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glMulticastScissorArrayvNVX(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glMulticastViewportPositionWScaleNVX(IIFF)V", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glAsyncCopyImageSubDataNVX([I[JIIIIIIIIIIIIIIIII[I[J)I", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glAsyncCopyBufferSubDataNVX([I[JIIIIJJJ[I[J)J", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glMulticastViewportArrayvNVX(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        methods.put("glMulticastScissorArrayvNVX(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVXGpuMulticast2ErrorContext");
        return methods;
    }
}
